// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Synchronize enables "Continue" 1`] = `
<ForwardRef
  fluid={false}
>
  <ForwardRef
    noGutters={false}
  >
    <ForwardRef>
      <ForwardRef
        fluid={false}
      >
        <h1>
          Waiting for team
        </h1>
        <p>
          You're quick! Let's wait for the rest of your team.
        </p>
      </ForwardRef>
    </ForwardRef>
  </ForwardRef>
  <UNDEFINED>
    <withRouter(LinkContainer)
      to="/question/1"
    >
      <ForwardRef
        active={false}
        disabled={false}
        variant="success"
      >
        Continue
      </ForwardRef>
    </withRouter(LinkContainer)>
  </UNDEFINED>
</ForwardRef>
`;

exports[`components/Synchronize matches snapshot 1`] = `
<ForwardRef
  fluid={false}
>
  <ForwardRef
    noGutters={false}
  >
    <ForwardRef>
      <ForwardRef
        fluid={false}
      >
        <h1>
          Waiting for team
        </h1>
        <p>
          You're quick! Let's wait for the rest of your team.
        </p>
      </ForwardRef>
    </ForwardRef>
  </ForwardRef>
  <UNDEFINED>
    <withRouter(LinkContainer)
      to="/question/1"
    >
      <ForwardRef
        active={false}
        disabled={true}
        variant="success"
      >
        Continue
      </ForwardRef>
    </withRouter(LinkContainer)>
  </UNDEFINED>
</ForwardRef>
`;
